backend/deployment/clans/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 9902 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/clans" }
                route:
                  cluster: clans
              - match: { prefix: "/static" }
                route:
                  # prefix_rewrite: "/static"
                  cluster: clans
              - match: { prefix: "/mqtt" }
                route:
                  cluster: ssms_auth
  clusters:
  - name: clans
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: round_robin
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: clans
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "172.12.1.12"
                port_value: 10902
  - name: ssms_auth
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: round_robin
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: ssms_auth
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "172.12.1.12"
                port_value: 11080
